force-app/main/default/objects/ResourceTask__c/ResourceTask__c.object-meta.xml
<CustomObject>
    <label>Resource Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>