force-app/main/default/objects/ResourceTask__c/fields/AproximateHours__c.field-meta.xml
<CustomField>
    <fullName>AproximateHours__c</fullName>
    <label>AproximateHours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>