force-app/main/default/objects/ResourceTask__c/fields/InProgress__c.field-meta.xml
<CustomField>
    <fullName>InProgress__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &apos;In Progress&apos;) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Progress</label>
    <type>Checkbox</type>
</CustomField>