force-app/main/default/objects/ResourceTask__c/fields/IsCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsCompleted__c</fullName>
    <formula>IF( ISPICKVAL( Status__c , &apos;Completed&apos;) , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCompleted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>