force-app/main/default/objects/ResourceTask__c/fields/Rateph__c.field-meta.xml
<CustomField>
    <fullName>Rateph__c</fullName>
    <formula>Resource__r.Rateph__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rateph</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>