force-app/main/default/objects/ResourceTask__c/fields/RegisteredHours__c.field-meta.xml
<CustomField>
    <fullName>RegisteredHours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Registered Hours</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>